# mypi-agent

./: .gitignore  AGENTS.md  README.md  agent-devboot.sh  devboot.sh  devenv.nix  devenv.yaml  pyproject.toml  secretspec.toml
.agents/skills/: .allium-devenv-source  allium  distill  elicit  propagate  tend  weed
.scratch/models/: AgentRoot.json  DoctorRun.json  InstalledManifest.json  SecretRuntimePolicy.json  SettingsShim.json  SyncRun.json  UseTopologyPolicy.json
.scratch/plans/: TRACEABILITY.md  core.plan.json  doctor.plan.json  index.plan.json  packages.plan.json  secrets.plan.json  surfaces.plan.json  sync.plan.json  topology.plan.json
.scratch/projects/01-mypi-agent-brainstorming/: MYPI-AGENT_CONCEPT.md
.scratch/projects/02-proper-implementation/: IMPLEMENTATION_PROGRESS_CHECKLIST.md  MYPI-AGENT_CORRECTIONS.md  MYPI_COMPLETION.md
.scratch/projects/03-review/: MYPI-AGENT_REFACTOR_REQUIREMENTS.md  REVIEW_REFACTOR_CHECKLIST.md
.scratch/projects/04-no-wrapper-refactor/: MYPI-AGENT_CODE_REVIEW.md  MYPI_SIMPLIFIED_SPEC_REVIEW.md  P0_REFACTORING_GUIDE.md
.scratch/projects/05-devenv-reconfig/: DEVENV_CONFIG_CONCEPT.md  DEVENV_CONFIG_REFACTOR.md  (+1 more)
.scratch/specs/: ELICITATION.md
dev/: devenv.nix  devenv.yaml
dev/allium/: devenv.nix
modules/: pi-agent.nix
src/mypi_agent/: base_model.py  cli.py  doctor.py  models.py  runtime.py  surfaces_runtime.py  sync.py
tests/: conftest.py
tests/integration/: test_allium_contracts.py  test_allium_obligations.py  test_cli.py  test_devenv_fixtures.py  test_doctor.py  test_surface_actor_access.py  test_sync.py
(+24 files in other folders)
